--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyBlog</title>
+    <link rel="icon" type="image/svg+xml" href="/MyBlog/favicon.svg">
   </head>
   <body>
     <div id="root"></div>
